Corrected previous changes

--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,6 @@ Maintenance of the site, usability testing, addition of extra functionality and 
 Perstorp AB, 2010 — 2013</br>
 Summer jobs four years in row.</br>
 </br>
-Duties:</br>
 * Communication with a lot of people involved in the process</br>
 * Physically empty all trucks and rail cars delivered.</br>
 * Inventories of the entire Perstorp AB's stock.</br>
@@ -30,7 +29,7 @@ Klippans Simhall, 2006 — 2008</br>
 Summer job at Ljungbyheds Friluftsbad three years in a row.</br>
 
 </br>
-<h1>Utbildningar</h1>
+<h1>Education</h1>
 <h2>Lunds Tekniska Högskola, Campus Helsingborg</h2>
 Computer Science, 2010 — 2015</br>
 Bachelor of Science in Computer Science, from the development of software for applications for Android and web development.</br>
@@ -41,12 +40,12 @@ Perstorp Gymnasium, one of the best secondary schools in Sweden. Everything from
 </br>
 
 <h1>Programming languages ​​/ tools</h1>
-Java / Android development.</br>
-C++.</br>
-ASP.net (C#, CSS, XML, SQL, JavaScript, phpMyAdmin).</br>
-HTML/HTML5.</br>
-Angular.js / Bootstrap.</br>
-GitHub / GitPages.</br>
+* Java / Android development.</br>
+* C++.</br>
+* ASP.net (C#, CSS, XML, SQL, JavaScript, phpMyAdmin).</br>
+* HTML/HTML5.</br>
+* Angular.js / Bootstrap.</br>
+* GitHub / GitPages.</br>
 
 </br>
 <h1>Other Merits</h1>
@@ -59,6 +58,7 @@ Communications Manager and responsible for the website, social media and on the 
 AM, B.
 
 <h1>Languages</h1>
+</br>
 English, fluent.</br>
 Swedish, fluent.</br>
 German, intermediate.</br>
