Last changes to resume page

--- a/resume.html
+++ b/resume.html
@@ -57,10 +57,11 @@ Communications Manager and responsible for the website, social media and on the 
 </br>
 <h1>Driving License</h1>
 </br>
-AM, B.
+*AM</br>
+*B.
 
 <h1>Languages</h1>
 </br>
-English, fluent.</br>
-Swedish, fluent.</br>
-German, intermediate.</br>
+* English, fluent.</br>
+* Swedish, fluent.</br>
+* German, intermediate.</br>
