Adding changes according to this
http://www.reddit.com/r/learnprogramming/comments/38csz7/html_javascript_this_page_is_exposed_to/

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <meta property="og:type" content="Developer Blog" />
     <meta property="og:url" content="http://danieboy.github.io/" />
     <meta property="og:image" content="http://danieboy.github.io/images/profilepicture.jpg" />
+    <meta HTTP-EQUIV="EXPIRES" CONTENT="Thu, 31 Dec 2015 12:00:00 GMT">
     <link rel="icon" type="image/jpg" href="/images/Web-under-construction.jpeg" />
     <!--[if IE]><link rel="shortcut icon" type="image/x-icon" href="/images/Web-under-construction.jpeg" /><![endif]-->
 
-    <link href='https://fonts.googleapis.com/css?family=Architects+Daughter:normal, italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Architects+Daughter:normal, italic|Raleway:400,500,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
