--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/tabs.css" />
     <link rel="stylesheet" type="text/css" href="stylesheets/main.css" />
     <link data-require="bootstrap-css" data-semver="3.1.1" rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
-    <link Content-Type="text/css" data-require="semantic-ui@*" data-semver="0.9.6" rel="stylesheet" href="https://raw.github.com/Semantic-Org/Semantic-UI/0.9.6/build/packaged/css/semantic.min.css" />
+    <link Content-Type="text/css" data-require="semantic-ui@*" data-semver="0.9.6" rel="stylesheet" href="https://rawgit.com/Semantic-Org/Semantic-UI/0.9.6/build/packaged/css/semantic.min.css" />
 
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
