Changes to the text on start.html

--- a/start.html
+++ b/start.html
@@ -6,11 +6,8 @@ I am currently living in Klippan (Skane, Sweden), but I've got plans to move as 
 I studied at the Faculty of Engineering (LTH), Lund University at their Campus Helsingborg for a bachelor's degree in computer science, in short it's a broad education that is most centered around the development of software, websites or applications for Android phones.
 </br></br>
 The past year I have spent at a company called Markettime AB, where I have worked with my bachelor's thesis and has been a web developer for a service that the company offers, www.markettools.se, which is developed in ASP.net (C #, JavaScript, CSS, PHP, SQL) and I thought it was very interesting to see how that worked.
-Now I'm employed by the hour at Diflex AB so they call me when needed for a project.
-I also have a drivers license and usually have access to a car if needed through my parents, but plan to buy a car in the near future.
 </br></br>
 In my spare time I go to the gym, depending on how much time I have over. I am also the IT manager for HelsingborgsSpexet, which is a non-profit organization based around students at Campus Helsingborg.
-I also develop some Android applications for fun which can be seen in the "My Projects" tab at the top of this webpage.
 Information about that can be found at:
 </br>
 <a href="http://www.helsingborgsspexet.se/"> Helsingborgsspexet.se (Swedish)</a>
@@ -21,12 +18,11 @@ For the moment I am trying to build my portfolio by doing projects such as an An
 My current goal is to get my foot in the industry and being able to make a living out of something I really enjoy doing - programming and working in a team.
 As a long term goal I would really want to become some kind of a project manager because it's something that I really enjoyed doing and had good results with during my education in projects in the school and on companies.
 </br></br>
-<img src="images/profilepicture.jpg" alt="Profile Picture"></br></br>
-
+<img src="images/profilepicture.jpg" alt="Profile Picture"></br>
+I also develop some Android applications for fun which can be seen in the "My Projects" tab at the top of this webpage.
+</br></br>
 <h1><a id="2015-05-26" class="anchor" href="#2015-05-26" aria-hidden="true"><span class="octicon octicon-link"></span></a>Update 2015-05-26</h1>
 </br></br>
-I'm still looking for a job but it's looking brighter the more experience that I get from developing on my own and applying for more jobs.
-</br>
 Lately I've been very interested in Android development and more specificly my BMI Calculator Application which I will be updating on the webpage once I'm fully satisfied with it. Considering to post the code as well with pictures like I currently have.
 </br>
 The application is working, it's calculating your BMI flawlessly. What I've played with is sharing it on social media such as Facebook and Twitter which was a fun experience and good practise in using new APIs. And then added Parse push notifications which made the application crash a lot. Using the Crashlytics tool I've managed to get rid of pretty much every bug that I have found so far.
