--- a/start.html
+++ b/start.html
@@ -8,9 +8,7 @@ I studied at the Faculty of Engineering (LTH), Lund University at their Campus H
 The past year I have spent at a company called Markettime AB, where I have worked with my bachelor's thesis and has been a web developer for a service that the company offers, www.markettools.se, which is developed in ASP.net (C #, JavaScript, CSS, PHP, SQL) and I thought it was very interesting to see how that worked.
 </br></br>
 In my spare time I go to the gym, depending on how much time I have over. I am also the IT manager for HelsingborgsSpexet, which is a non-profit organization based around students at Campus Helsingborg.
-Information about that can be found at:
-</br>
-<a href="http://www.helsingborgsspexet.se/"> Helsingborgsspexet.se (Swedish)</a>
+Information about that can be found at: <a href="http://www.helsingborgsspexet.se/"> Helsingborgsspexet.se (Swedish)</a>
 </br></br>
 As an IT manager, I look after the website, is in charge of communication (email to both students, partners and social media) and is on the board.
 For the moment I am trying to build my portfolio by doing projects such as an Android application and this personal homepage.
@@ -18,9 +16,8 @@ For the moment I am trying to build my portfolio by doing projects such as an An
 My current goal is to get my foot in the industry and being able to make a living out of something I really enjoy doing - programming and working in a team.
 As a long term goal I would really want to become some kind of a project manager because it's something that I really enjoyed doing and had good results with during my education in projects in the school and on companies.
 </br></br>
-<img src="images/profilepicture.jpg" alt="Profile Picture"></br>
-I also develop some Android applications for fun which can be seen in the "My Projects" tab at the top of this webpage.
-</br></br>
+<img src="images/profilepicture.jpg" alt="Profile Picture"></br></br>
+
 <h1><a id="2015-05-26" class="anchor" href="#2015-05-26" aria-hidden="true"><span class="octicon octicon-link"></span></a>Update 2015-05-26</h1>
 </br></br>
 Lately I've been very interested in Android development and more specificly my BMI Calculator Application which I will be updating on the webpage once I'm fully satisfied with it. Considering to post the code as well with pictures like I currently have.
