--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta http-equiv="cache-control" content="max-age=0" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+    <meta http-equiv="pragma" content="no-cache" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="Author: Dan Andersson Author" />
     <meta property="og:title" content="Danieboy" />
     <meta property="og:type" content="Developer Blog" />
     <meta property="og:url" content="http://danieboy.github.io/" />
     <meta property="og:image" content="http://danieboy.github.io/images/profilepicture.jpg" />
-    <meta HTTP-EQUIV="EXPIRES" CONTENT="Thu, 31 Dec 2015 12:00:00 GMT">
     <link rel="icon" type="image/jpg" href="/images/Web-under-construction.jpeg" />
     <!--[if IE]><link rel="shortcut icon" type="image/x-icon" href="/images/Web-under-construction.jpeg" /><![endif]-->
 
