Updated resume to match my updated one

--- a/resume.html
+++ b/resume.html
@@ -1,61 +1,67 @@
-<h1>Employments</h1>
-<h2>Web Developer</h2>
-MarketTime AB, 2014 — 2015</br>
-Web Developer in ASP.net, www.markettime.se / www.markettools.se.</br>
-Maintenance of the site, usability testing, addition of extra functionality and customer contact.</br>
-</br>
-<h2>Handling of Raw Materials</h2>
-Perstorp AB, 2010 — 2013</br>
-Summer jobs four years in row.</br>
-</br>
-* Communication with a lot of people involved in the process</br>
-* Physically empty all trucks and rail cars delivered.</br>
-* Inventories of the entire Perstorp AB's stock.</br>
-</br>
-<h2>Maintenance Engineer</h2>
-Perstorp AB, 2009 — 2009</br>
-Internships which then led to a summer job.</br>
-</br>
-<h2>Process Engineer</h2>
-Perstorp AB, 2008 — 2008</br>
-Internship.</br>
-</br>
-<h2>Laboratory Technician</h2>
-Celanese Emulsions, 2008 — 2008</br>
-Summer job.</br>
-</br>
-<h2>Indoor Swimming Pool Employee</h2>
-Klippans Simhall, 2006 — 2008</br>
-Summer job at Ljungbyheds Friluftsbad three years in a row.</br>
+<h1>Dan Andersson</h1>
+<h2>Bachelor's Degree in Computer Science</h2>
+</br></br>
 
-</br>
+<h1>Profile</h1>
+23-year-old and recently graduated. Currently resides in <a href="https://www.google.se/maps/place/Klippans+kommun/@56.1350528,13.1290641,16z/data=!4m2!3m1!1s0x4653d9f9287139e9:0x1819a50c6b090ce1">Klippan, Skåne</a>.
+I have an interest in programming and my long term goal is to get a position involving project management.
+</br></br>
+
 <h1>Education</h1>
-<h2>Lunds Tekniska Högskola, Campus Helsingborg</h2>
-Computer Science, 2010 — 2015</br>
-Bachelor of Science in Computer Science, from the development of software for applications for Android and web development.</br>
-</br>
-<h2>Perstorp Gymnasium</h2>
-Engineering and technical industry, 2007 — 2010</br>
-Perstorp Gymnasium, one of the best secondary schools in Sweden. Everything from industry to chemistry and business administration.</br>
-</br>
+<h2>Bachelor of Science in Computer Science.</h2>
+<a href="http://www.lth.se/">Faculty of Engineering (LTH), Lund University</a>. 2010 — 2015</br>
+</br></br>
+
+<h2>Chemical Engineering</h2>
+<a href="http://www.perstorpgymnasium.org/">Perstorp Gymnasium</a>. 2007 — 2010
+</br></br>
+
+<h1>Experience</h1>
+<h2>Web Developer</h2>
+<a href="http://www.markettime.se/">MarketTime AB</a>, 2014 —</br>
+Development of Market Time AB's auction system <a href="www.markettools.se">markettools</a> and specified pages created for customers of using this system.
+</br></br>
+
+<h2>Laboratory Technician, Process Engineer, Maintenance Engineer and Handling of Raw Materials</h2>
+Perstorp AB, 2008 — 2013</br>
+Perstorp AB is one of the leading chemical companies in the world.
+Duties during the majority of the time was about the responsibility of raw materials to Perstorp AB's site in Perstorp,
+which involved communication with a large amount of people from countries including for example Sweden, Belgium and Germany.
+</br></br>
+
+<h1>Volunteer Work</h1>
+<h2>IT Manager / Webmaster</h2>
+<a href="http://www.helsingborgsspexet.se/">Helsingborgsspexet</a>, 2014 — 2015</br>
+Responsible for communication through social media, website and email as well as sitting on the board which involved the organization of events, including
+<a href="http://www.dunkerskulturhus.se/">Dunkers Kulturhus</a>.
+</br></br>
 
 <h1>Programming languages ​​/ tools</h1>
+<h2>Java</h2>
+Android development, multithreading.
 </br>
-* Java / Android development.</br>
-* C++.</br>
-* ASP.net (C#, CSS, XML, SQL, JavaScript, phpMyAdmin).</br>
-* HTML/HTML5.</br>
-* Angular.js / Bootstrap.</br>
-* GitHub / GitPages.</br>
-
+<h2>ASP.net</h2>
+C#, SQL, JavaScript, CSS and HTML.
 </br>
-<h1>Other Merits</h1>
-<h2>IT Manager / Webmaster</h2>
-Helsingborgsspexet, 2014 — 2015</br>
-Communications Manager and responsible for the website, social media and on the board.</br>
+<h2>C++</h2>
+</br>
+<h2>HTML/HTML5</h2>
+</br>
+<h2>Angular</h2>
+</br>
+<h2>Bootstrap</h2>
+</br>
+<h2>C</h2>
+</br>
+<h2>MySQL</h2>
+</br>
+<h2>GitHub och GitPages</h2>
+</br>
+<h2>Adobe Photoshop CS6</h2>
+</br></br>
 
 <h1>Languages</h1>
 </br>
-* English, fluent.</br>
-* Swedish, fluent.</br>
-* German, intermediate.</br>
+Swedish, native.</br>
+English, fluent.</br>
+German, intermediate.</br>
