Updated bmi-calculator page and optimized pictures

--- a/bmi-calculator/index.html
+++ b/bmi-calculator/index.html
@@ -24,8 +24,8 @@
 </header>
 
 <div id="content-wrapper">
-    <div class="inner clearfix">
-        <section id="main-content">
+    <br class="inner clearfix">
+        < id="main-content">
             <h3>
                 <a id="welcome-to-my-developer-blog" class="anchor" href="#welcome-to-my-developer-blog" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my Android BMI-Calculator!</h3>
 
@@ -34,11 +34,14 @@
             <h2>Change Theme</h2>
                 <img src="pictures/change-theme.png" alt="Change Theme"></br>
             <h2>Calculate</h2>
-                <img src="pictures/calculate.png" alt="Calculate"></br>
+                <img src="pictures/calculate-eu.png" alt="Calculate EU"></br>
+                <img src="pictures/calculate-us.png" alt="Calculate US"></br>
             <h2>Results</h2>
                 <img src="pictures/results.png" alt="Results"></br>
             <h2>Share on Facebook</h2>
                 <img src="pictures/facebook-share.png" alt="Facebook Share"></br>
+            <h2>Share on Twitter</h2>
+                <img src="pictures/twitter-share.png" alt="Twitter Share"></br>
             <h2>About</h2>
             <img src="pictures/about.png" alt="About">
             </p>
