Corrected links and spacing on resume.html

--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,6 @@
 <h1>Dan Andersson</h1>
 <h2>Bachelor's Degree in Computer Science</h2>
-</br></br>
+</br>
 
 <h1>Profile</h1>
 23-year-old and recently graduated. Currently resides in <a href="https://www.google.se/maps/place/Klippans+kommun/@56.1350528,13.1290641,16z/data=!4m2!3m1!1s0x4653d9f9287139e9:0x1819a50c6b090ce1">Klippan, Skåne</a>.
@@ -19,7 +19,7 @@ I have an interest in programming and my long term goal is to get a position inv
 <h1>Experience</h1>
 <h2>Web Developer</h2>
 <a href="http://www.markettime.se/">MarketTime AB</a>, 2014 —</br>
-Development of Market Time AB's auction system <a href="www.markettools.se">markettools</a> and specified pages created for customers of using this system.
+Development of Market Time AB's auction system <a href="http://www.markettools.se">Markettools</a> and specified pages created for customers of using this system.
 </br></br>
 
 <h2>Laboratory Technician, Process Engineer, Maintenance Engineer and Handling of Raw Materials</h2>
@@ -44,21 +44,14 @@ Android development, multithreading.
 C#, SQL, JavaScript, CSS and HTML.
 </br>
 <h2>C++</h2>
-</br>
 <h2>HTML/HTML5</h2>
-</br>
 <h2>Angular</h2>
-</br>
 <h2>Bootstrap</h2>
-</br>
 <h2>C</h2>
-</br>
 <h2>MySQL</h2>
-</br>
 <h2>GitHub och GitPages</h2>
-</br>
 <h2>Adobe Photoshop CS6</h2>
-</br></br>
+</br>
 
 <h1>Languages</h1>
 </br>
