--- a/bmi-calculator/index.html
+++ b/bmi-calculator/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta http-equiv="cache-control" content="max-age=0" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="expires" content="Thu, 31 Dec 2015 12:00:00 GMT" />
+    <meta http-equiv="pragma" content="no-cache" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/main.css">
+    <meta name="description" content="Author: Dan Andersson Author" />
+    <meta property="og:title" content="Danieboy" />
+    <meta property="og:type" content="Developer Blog" />
+    <meta property="og:url" content="http://danieboy.github.io/" />
+    <meta property="og:image" content="http://danieboy.github.io/images/profilepicture.jpg" />
+    <!--[if IE]><link rel="shortcut icon" type="image/x-icon" href="/images/Web-under-construction.jpeg" /><![endif]-->
+
+    <link href='https://fonts.googleapis.com/css?family=Architects+Daughter:normal, italic|Raleway:400,500,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <link rel="stylesheet" type="text/css" href="stylesheets/main.css" />
+    <link data-require="bootstrap-css" data-semver="3.1.1" rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
+    <link Content-Type="text/css" data-require="semantic-ui@*" data-semver="0.9.6" rel="stylesheet" href="https://rawgit.com/Semantic-Org/Semantic-UI/0.9.6/build/packaged/css/semantic.min.css" />
 
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -25,7 +42,7 @@
 
 <div id="content-wrapper">
     <br class="inner clearfix">
-        < id="main-content">
+        <section id="main-content">
             <h3>
                 <a id="welcome-to-my-developer-blog" class="anchor" href="#welcome-to-my-developer-blog" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my Android BMI-Calculator!</h3>
 
