--- a/bmi-calculator/index.html
+++ b/bmi-calculator/index.html
@@ -45,20 +45,27 @@
             <h3>
                 <a id="welcome-to-my-developer-blog" class="anchor" href="#welcome-to-my-developer-blog" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my Android BMI-Calculator!</h3>
 
-            <h2>Start Screen</h2>
-                <img src="pictures/start-screen.png" alt="Start Screen"></br>
-            <h2>Change Theme</h2>
-                <img src="pictures/change-theme.png" alt="Change Theme"></br>
-            <h2>Calculate</h2>
-                <img src="pictures/calculate-eu.png" alt="Calculate EU"></br>
-                <img src="pictures/calculate-us.png" alt="Calculate US"></br>
-            <h2>Results</h2>
-                <img src="pictures/results.png" alt="Results"></br>
-            <h2>Share on Facebook</h2>
-                <img src="pictures/facebook-share.png" alt="Facebook Share"></br>
-            <h2>Share on Twitter</h2>
-                <img src="pictures/twitter-share.png" alt="Twitter Share"></br>
-            <h2>About</h2>
+            <h1>Start Screen</h1>
+                <img src="pictures/start-screen.png" alt="Start Screen">
+            </br></br>
+            <h1>Change Theme</h1>
+                <img src="pictures/change-theme.png" alt="Change Theme">
+            </br></br>
+            <h1>Calculate</h1>
+                <img src="pictures/calculate-eu.png" alt="Calculate EU">
+            </br></br>
+                <img src="pictures/calculate-us.png" alt="Calculate US">
+            </br></br>
+            <h1>Results</h1>
+                <img src="pictures/results.png" alt="Results">
+            </br></br>
+            <h1>Share on Facebook</h1>
+                <img src="pictures/facebook-share.png" alt="Facebook Share">
+            </br></br>
+            <h1>Share on Twitter</h1>
+                <img src="pictures/twitter-share.png" alt="Twitter Share">
+            </br></br>
+            <h1>About</h1>
             <img src="pictures/about.png" alt="About">
             </p>
         </section>
