Added link to Perstorp AB

--- a/resume.html
+++ b/resume.html
@@ -23,7 +23,7 @@ Development of Market Time AB's auction system <a href="http://www.markettools.s
 </br></br>
 
 <h2>Laboratory Technician, Process Engineer, Maintenance Engineer and Handling of Raw Materials</h2>
-Perstorp AB, 2008 — 2013</br>
+<a href="https://www.perstorp.com/">Perstorp AB</a>, 2008 — 2013</br>
 Perstorp AB is one of the leading chemical companies in the world.
 Duties during the majority of the time was about the responsibility of raw materials to Perstorp AB's site in Perstorp,
 which involved communication with a large amount of people from countries including for example Sweden, Belgium and Germany.
