Added C# projects to my projects

--- a/myProjects.html
+++ b/myProjects.html
@@ -8,3 +8,7 @@
 </br></br>
 <h1><a href="http://test2.markettools.se"> Markettools </br>Markettime AB (Swedish)</a></h1>
 </br></br>
+<h1><a href="https://github.com/Danieboy/Draw-thread-boxes-in-C-/tree/master"> Draw Thread Boxes in C#.</a></h1>
+</br></br>
+<h1><a href="https://github.com/Danieboy/Console-Application-Threading-Example"> Console Application - Threading Example in C#</a></h1>
+</br></br>
