--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,10 @@
-<h1><a href="http://se.linkedin.com/in/danandersson7"> Linkedin</a></h1>
-<br/></br>
-<h1><a href="https://twitter.com/DanProgramming"> Twitter</a></h1>
-<br/></br>
-<h1><a href="https://github.com/Danieboy"> GitHub</a></h1>
-<br/></br>
+<a href="http://se.linkedin.com/in/danandersson7"> <img src="/images/linkedinpicture.png" alt="Linkedin Picture" style="width:400px;height:400px;border:0;"></a>
+<br/>
+<a href="https://twitter.com/DanProgramming"> <img src="/images/twitterpicture.png" alt="Twitter Picture" style="width:400px;height:400px;border:0;"></a>
+<br/>
+<a href="https://github.com/Danieboy"> <img src="/images/githubpicture.png" alt="GitHub Picture" style="width:400px;height:400px;border:0;"></a>
+<br/>
+<img src="/images/gmailpicture.png" alt="GMail Picture" style="width:400px;height:400px;border:0;">
+</br>
 <h1>gda10dan@student.lu.se</h1>
-</br></br></br></br></br></br></br></br></br></br></br></br></br>
+</br></br>
