Added consistancy to contacts

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,5 @@
 <br/>
 <a href="https://github.com/Danieboy"> <img src="/images/githubpicture.png" alt="GitHub Picture" style="width:400px;height:400px;border:0;"></a>
 <br/>
-<img src="/images/gmailpicture.png" alt="GMail Picture" style="width:400px;height:400px;border:0;">
-</br>
-<h1>gda10dan@student.lu.se</h1>
+<a href="mailto:GDA10DAN@STUDENT.LU.SE"><img src="/images/gmailpicture.png" alt="GMail Picture" style="width:400px;height:400px;border:0;"></a>
 </br></br>
