--- a/myProjects.html
+++ b/myProjects.html
@@ -1,14 +1,25 @@
-<h1><a href="http://danieboy.github.io/hotorcold"> Hot or Cold</a></h1>
+<h1>Android</h1>
+<h2><a href="http://danieboy.github.io/bmi-calculator/index.html"> Android Application: </br>BMI-counter</a></h2>
 </br></br>
-<h1><a href="http://danieboy.github.io/flatlander-store/index.html"> Flatlander Store Project</a></h1>
+
+<h1>ASP.net</h1>
+<h2><a href="http://www.markettime.se/"> Markettime </br>Markettime AB (Swedish)</a></h2>
 </br></br>
-<h1><a href="http://danieboy.github.io/bmi-calculator/index.html"> Android Application: </br>BMI-counter</a></h1>
+<h2><a href="http://test2.markettools.se"> Markettools </br>Markettime AB (Swedish)</a></h2>
 </br></br>
-<h1><a href="http://www.markettime.se/"> Markettime </br>Markettime AB (Swedish)</a></h1>
+
+<h1>C#</h1>
+<h2><a href="https://github.com/Danieboy/Console-Application-Threading-Example"> Console Application - Threading Example in C#</a></h2>
+</br>
+<a href="https://www.youtube.com/watch?v=h6OU0SGf9yw"> Youtube link.</a>
 </br></br>
-<h1><a href="http://test2.markettools.se"> Markettools </br>Markettime AB (Swedish)</a></h1>
+<h2><a href="https://github.com/Danieboy/Draw-thread-boxes-in-C-/tree/master"> Draw Thread Boxes in C#.</a></h2>
+</br>
+<a href="https://www.youtube.com/watch?v=f7yQRW18vY8"> Youtube link.</a>
 </br></br>
-<h1><a href="https://github.com/Danieboy/Draw-thread-boxes-in-C-/tree/master"> Draw Thread Boxes in C#.</a></h1>
+
+<h1>Javascript</h1>
+<h2><a href="http://danieboy.github.io/hotorcold"> Hot or Cold</a></h2>
 </br></br>
-<h1><a href="https://github.com/Danieboy/Console-Application-Threading-Example"> Console Application - Threading Example in C#</a></h1>
+<h2><a href="http://danieboy.github.io/flatlander-store/index.html"> Flatlander Store Project</a></h2>
 </br></br>
