Text / links update
Changed text on start.html.
Added Youtube link and picture on contacts.html.
Changed layout on my projects.

--- a/start.html
+++ b/start.html
@@ -18,6 +18,14 @@ As a long term goal I would really want to become some kind of a project manager
 </br></br>
 <img src="images/profilepicture.jpg" alt="Profile Picture"></br></br>
 
+
+
+<h1><a id="2015-06-11" class="anchor" href="#2015-06-11" aria-hidden="true"><span class="octicon octicon-link"></span></a>Update 2015-06-11</h1>
+</br>
+I've updated this page a lot the past days and also added a Youtube-channel to show off my projects for people who don't understand the code or have the ability to download and run the code in the program neccesary.
+</br></br>
+
+
 <h1><a id="2015-05-26" class="anchor" href="#2015-05-26" aria-hidden="true"><span class="octicon octicon-link"></span></a>Update 2015-05-26</h1>
 </br>
 Lately I've been very interested in Android development and more specificly my BMI Calculator Application which I will be updating on the webpage once I'm fully satisfied with it. Considering to post the code as well with pictures like I currently have.
@@ -25,4 +33,4 @@ Lately I've been very interested in Android development and more specificly my B
 The application is working, it's calculating your BMI flawlessly. What I've played with is sharing it on social media such as Facebook and Twitter which was a fun experience and good practise in using new APIs. And then added Parse push notifications which made the application crash a lot. Using the Crashlytics tool I've managed to get rid of pretty much every bug that I have found so far.
 </br></br>
 I'll keep you updated as soon as I can!
-</br></br>
+</br>
