--- a/contact.html
+++ b/contact.html
@@ -4,5 +4,7 @@
 <br/>
 <a href="https://github.com/Danieboy"> <img src="/images/githubpicture.png" alt="GitHub Picture" style="width:400px;height:400px;border:0;"></a>
 <br/>
+<a href="https://www.youtube.com/channel/UCyEuWVr7G2l0yc4nwfwZXdA"><img src="/images/youtubepicture.jpg" alt="Youtube Picture" style="width:400px;height:400px;border:0;"></a>
+</br></br>
 <a href="mailto:GDA10DAN@STUDENT.LU.SE"><img src="/images/gmailpicture.png" alt="GMail Picture" style="width:400px;height:400px;border:0;"></a>
 </br></br>
