--- a/myProjects.html
+++ b/myProjects.html
@@ -4,7 +4,6 @@
 
 <h1>ASP.net</h1>
 <h2><a href="http://www.markettime.se/"> Markettime </br>Markettime AB (Swedish)</a></h2>
-</br>
 <h2><a href="http://test2.markettools.se"> Markettools </br>Markettime AB (Swedish)</a></h2>
 </br>
 
@@ -14,10 +13,14 @@
 </br>
 <h2><a href="https://github.com/Danieboy/Draw-thread-boxes-in-C-/tree/master"> Draw Thread Boxes in C#.</a></h2>
 <a href="https://www.youtube.com/watch?v=f7yQRW18vY8"> Youtube link.</a>
-</br>
+</br></br>
 
 <h1>Javascript</h1>
 <h2><a href="http://danieboy.github.io/hotorcold"> Hot or Cold</a></h2>
-</br>
 <h2><a href="http://danieboy.github.io/flatlander-store/index.html"> Flatlander Store Project</a></h2>
-</br>
+</br></br>
+
+<h1>C++</h1>
+<h2><a href="https://github.com/Danieboy/Queue-simulation-average-times"> Queue Simulation With Average Waiting Times</a></h2>
+<a href="https://www.youtube.com/watch?v=Zl-JdL70FNs"> Youtube link.</a>
+</br></br>
