Simply adding new application + link to it
Simply adding new application + link to it

--- a/myProjects.html
+++ b/myProjects.html
@@ -1,5 +1,6 @@
 <h1>Android</h1>
 <h2><a href="http://danieboy.github.io/bmi-calculator/index.html"> Android Application: </br>BMI-counter</a></h2>
+<h2><a href="http://danieboy.github.io/five-star-day/index.html"> Android Application: </br>Fivestarday</a></h2>
 </br>
 
 <h1>ASP.net</h1>
