--- a/five-star-day/index.html
+++ b/five-star-day/index.html
@@ -48,26 +48,12 @@
             <h1>Start Screen</h1>
                 <img src="pictures/start-screen.png" alt="Start Screen">
             </br></br>
-            <h1>Change Theme</h1>
-                <img src="pictures/change-theme.png" alt="Change Theme">
+            <h1>Information Page</h1>
+                <img src="pictures/information-page.png" alt="Information Page">
             </br></br>
             <h1>Calculate</h1>
-                <img src="pictures/calculate-eu.png" alt="Calculate EU">
+                <img src="pictures/google-maps.png" alt="Google Maps">
             </br></br>
-                <img src="pictures/calculate-us.png" alt="Calculate US">
-            </br></br>
-            <h1>Results</h1>
-                <img src="pictures/results.png" alt="Results">
-            </br></br>
-            <h1>Share on Facebook</h1>
-                <img src="pictures/facebook-share.png" alt="Facebook Share">
-            </br></br>
-            <h1>Share on Twitter</h1>
-                <img src="pictures/twitter-share.png" alt="Twitter Share">
-            </br></br>
-            <h1>About</h1>
-            <img src="pictures/about.png" alt="About">
-            </p>
         </section>
 
         <aside id="sidebar">
