--- a/five-star-day/index.html
+++ b/five-star-day/index.html
@@ -42,16 +42,14 @@
 <div id="content-wrapper">
     <br class="inner clearfix">
         <section id="main-content">
-            <h3>
-                <a id="welcome-to-my-developer-blog" class="anchor" href="#welcome-to-my-developer-blog" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my Android BMI-Calculator!</h3>
 
-            <h1>Start Screen</h1>
+            <h1>Start Screen</h1></br></br>
                 <img src="pictures/start-screen.png" alt="Start Screen">
             </br></br>
-            <h1>Information Page</h1>
+            <h1>Information Page</h1></br></br>
                 <img src="pictures/information-page.png" alt="Information Page">
             </br></br>
-            <h1>Calculate</h1>
+            <h1>Calculate</h1></br></br>
                 <img src="pictures/google-maps.png" alt="Google Maps">
             </br></br>
         </section>
