--- a/bmi-calculator/index.html
+++ b/bmi-calculator/index.html
@@ -46,12 +46,15 @@
             <h1>Start Screen</h1></br></br>
                 <img src="pictures/start-screen.png" alt="Start Screen">
             </br></br>
-            <h1>Change Theme</h1>
+            <h1>Change Theme</h1></br></br>
                 <img src="pictures/change-theme.png" alt="Change Theme">
             </br></br>
             <h1>Calculate</h1></br></br>
+
+            <h2>Centimeters and kilos</h2></br></br>
                 <img src="pictures/calculate-eu.png" alt="Calculate EU">
             </br></br>
+            <h2>Feet, inches and pounds</h2></br></br>
                 <img src="pictures/calculate-us.png" alt="Calculate US">
             </br></br>
             <h1>Results</h1></br></br>
