--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" class="no-js" ng-app="developerBlog">
   <head>
     <meta charset='utf-8'>
@@ -45,7 +45,7 @@
     <header>
       <div class="inner">
         <h1>Danieboy.GitHub.io</h1>
-        <h2>Developer blog</h2>
+        <h2>Software developer</h2>
         <p class="support">Your browser does not support <strong>flexbox</strong>! <br />Please view this demo with a <strong>modern browser</strong>.</p>
       </div>
     </header>
