--- a/myProjects.html
+++ b/myProjects.html
@@ -1,27 +1,16 @@
 <h1>Android</h1>
-<h2><a href="http://danieboy.github.io/bmi-calculator/index.html"> Android Application: </br>BMI-counter</a></h2>
-<h2><a href="http://danieboy.github.io/five-star-day/index.html"> Android Application: </br>Fivestarday</a></h2>
+<h2><a href="http://danieboy.github.io/bmi-calculator/index.html">BMI-counter</a></h2>
+<h2><a href="http://danieboy.github.io/five-star-day/index.html">Fivestarday</a></h2>
 </br>
 
 <h1>ASP.net</h1>
-<h2><a href="http://www.markettime.se/"> Markettime </br>Markettime AB (Swedish)</a></h2>
+<h2><a href="https://api.nowaste.se/NowasteOrder"> NowasteOrder (ASP.net, Razor MVC)</a></h2>
 <h2><a href="http://test2.markettools.se"> Markettools </br>Markettime AB (Swedish)</a></h2>
 </br>
-
-<h1>C#</h1>
-<h2><a href="https://github.com/Danieboy/Console-Application-Threading-Example"> Console Application - Threading Example in C#</a></h2>
-<a href="https://www.youtube.com/watch?v=h6OU0SGf9yw"> Youtube link.</a>
-</br>
-<h2><a href="https://github.com/Danieboy/Draw-thread-boxes-in-C-/tree/master"> Draw Thread Boxes in C#.</a></h2>
-<a href="https://www.youtube.com/watch?v=f7yQRW18vY8"> Youtube link.</a>
-</br></br>
 
 <h1>Javascript</h1>
 <h2><a href="http://danieboy.github.io/hotorcold"> Hot or Cold</a></h2>
 <h2><a href="http://danieboy.github.io/flatlander-store/index.html"> Flatlander Store Project</a></h2>
-</br></br>
-
-<h1>C++</h1>
-<h2><a href="https://github.com/Danieboy/Queue-simulation-average-times"> Queue Simulation With Average Waiting Times</a></h2>
-<a href="https://www.youtube.com/watch?v=Zl-JdL70FNs"> Youtube link.</a>
+</br>
+    (Picture links are currently broken)
 </br></br>
