--- a/resume.html
+++ b/resume.html
@@ -3,8 +3,9 @@
 </br>
 
 <h1>Profile</h1>
-23-year-old and recently graduated. Currently resides in <a href="https://www.google.se/maps/place/Klippans+kommun/@56.1350528,13.1290641,16z/data=!4m2!3m1!1s0x4653d9f9287139e9:0x1819a50c6b090ce1">Klippan, Skåne</a>.
-I have an interest in programming and my long term goal is to get a position involving project management.
+24-year-old with over a year of experience of working as a programmer in different languages and projects simultaniously. 
+Currently resides in <a href="https://www.google.se/maps/place/Helsingborg/data=!4m2!3m1!1s0x46522d7a50a22925:0x4019078290e7a90?sa=X&ved=0ahUKEwiPjOnfldTKAhWMCywKHYOJB0gQ8gEIhQEwEA">Helsingborg, Skåne</a>.
+I have an interest in programming and my long term goal is to get a position involving project management after getting a few years of experience so that I know what I am talking about and have more credibility.
 </br></br>
 
 <h1>Education</h1>
@@ -17,10 +18,16 @@ I have an interest in programming and my long term goal is to get a position inv
 </br></br>
 
 <h1>Experience</h1>
-<h2>Web Developer</h2>
-<a href="http://www.markettime.se/">MarketTime AB</a>, 2014 —</br>
-Development of Market Time AB's auction system <a href="http://www.markettools.se">Markettools</a> and specified pages created for customers of using this system.
+<h2>Software Developer</h2>
+<a href="http://www.nowaste.se/">Nowaste Logistics AB</a>, 2015 — </br>
+Softwate developer involved in multiple large projects including a web-API <a href="https://api.nowaste.se/NowasteOrder"> NowasteOrder (ASP.net, Razor MVC)</a>,
+working with the main logistics system Effect (C#) and a mobile client used in the trucks written in Visual Basic 6.
 </br></br>
+
+<h2>Web Developer</h2>
+<a href="http://www.markettime.se/">MarketTime AB</a>, 2014 — 2015</br>
+Development of Market Time AB's auction system <a href="www.test2.markettools.se">Markettools</a> and specified pages created for customers of using this website.
+This in combination with writing my Bachelor's Thesis on <a href="http://www.lu.se/lup/publication/5147250"> usability testing (swedish)</a>.
 
 <h2>Laboratory Technician, Process Engineer, Maintenance Engineer and Handling of Raw Materials</h2>
 <a href="https://www.perstorp.com/">Perstorp AB</a>, 2008 — 2013</br>
@@ -41,15 +48,17 @@ Responsible for communication through social media, website and email as well as
 Android development, multithreading.
 </br>
 <h2>ASP.net</h2>
-C#, SQL, JavaScript, CSS and HTML.
+C#, Razor MVC.
 </br>
+<h2>Javascript</h2>
+Angular.JS, Bootstrap.
+<h2>HTML</h2>
 <h2>C++</h2>
 <h2>HTML/HTML5</h2>
-<h2>Angular</h2>
-<h2>Bootstrap</h2>
 <h2>C</h2>
-<h2>MySQL</h2>
+<h2>SQL</h2>
 <h2>GitHub och GitPages</h2>
+<h2>Unit testing</h2>
 <h2>Adobe Photoshop CS6</h2>
 </br>
 
