--- a/start.html
+++ b/start.html
@@ -1,36 +1,20 @@
 <h1>
-    <a id="welcome-to-my-developer-blog" class="anchor" href="#welcome-to-my-developer-blog" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my developer blog!</h1>
+    <a id="welcome-to-my-developer-blog" class="anchor" href="#welcome-to-my-developer-blog" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome!</h1>
 </br>
-My name is Dan Andersson and I am 23 years old.
-I am currently living in Klippan (Skane, Sweden), but I've got plans to move as soon as possible depending on when and where I land my next job.
-I studied at the Faculty of Engineering (LTH), Lund University at their Campus Helsingborg for a bachelor's degree in computer science, in short it's a broad education that is most centered around the development of software, websites or applications for Android phones.
+My name is Dan Andersson and I am 24 years old.
+I am currently living in Helsingborg (Skane, Sweden) where I am employed at <a href="http://www.nowaste.se/"> Nowaste Logistics AB</a>
+I finished my studies at the Faculty of Engineering (LTH), Lund University at Campus Helsingborg with a bachelor's degree in computer science.
+In short it's a broad education that is mostly centered around the development of software, websites or applications for Android phones.
 </br></br>
-The past year I have spent at a company called Markettime AB, where I have worked with my bachelor's thesis and has been a web developer for a service that the company offers, www.markettools.se, which is developed in ASP.net (C #, JavaScript, CSS, PHP, SQL) and I thought it was very interesting to see how that worked.
+I spent my last year of my education at a company called Markettime AB, where I have worked with my bachelor's thesis and has been a web developer for a service that the company offers, <a href="http://test2.markettools.se/"> Markettools</a>, 
+which is developed in ASP.net (C #, JavaScript, CSS, PHP, SQL) and I thought it was very interesting to see how that worked.
 </br></br>
-In my spare time I go to the gym, depending on how much time I have over. I am also the IT manager for HelsingborgsSpexet, which is a non-profit organization based around students at Campus Helsingborg.
+In my spare time I go to the gym, go swimming and meet friends depending on how much time I have to spare. Last year I was also the IT manager for HelsingborgsSpexet, which is a non-profit organization based around students at Campus Helsingborg.
 Information about that can be found at: <a href="http://www.helsingborgsspexet.se/"> Helsingborgsspexet.se (Swedish)</a>
-</br></br>
 As an IT manager, I look after the website, is in charge of communication (email to both students, partners and social media) and is on the board.
-For the moment I am trying to build my portfolio by doing projects such as an Android application and this personal homepage.
 </br></br>
-My current goal is to get my foot in the industry and being able to make a living out of something I really enjoy doing - programming and working in a team.
+My current goal is to make my mark in the industry and being able to make a living out of something I really enjoy doing - programming and working in a team.
 As a long term goal I would really want to become some kind of a project manager because it's something that I really enjoyed doing and had good results with during my education in projects in the school and on companies.
 </br></br>
+For more information about my past and current projects you can click the "My Projects" tab at the top of this webpage.
 <img src="images/profilepicture.jpg" alt="Profile Picture"></br></br>
-
-
-
-<h1><a id="2015-06-11" class="anchor" href="#2015-06-11" aria-hidden="true"><span class="octicon octicon-link"></span></a>Update 2015-06-11</h1>
-</br>
-I've updated this page a lot the past days and also added a Youtube-channel to show off my projects for people who don't understand the code or have the ability to download and run the code in the program neccesary.
-</br></br>
-
-
-<h1><a id="2015-05-26" class="anchor" href="#2015-05-26" aria-hidden="true"><span class="octicon octicon-link"></span></a>Update 2015-05-26</h1>
-</br>
-Lately I've been very interested in Android development and more specificly my BMI Calculator Application which I will be updating on the webpage once I'm fully satisfied with it. Considering to post the code as well with pictures like I currently have.
-</br></br>
-The application is working, it's calculating your BMI flawlessly. What I've played with is sharing it on social media such as Facebook and Twitter which was a fun experience and good practise in using new APIs. And then added Parse push notifications which made the application crash a lot. Using the Crashlytics tool I've managed to get rid of pretty much every bug that I have found so far.
-</br></br>
-I'll keep you updated as soon as I can!
-</br>
