Corrected minor mistakes in text body.

--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 </br>
 
 <h1>Profile</h1>
-24-year-old with over a year of experience of working as a programmer in different languages and projects simultaniously. 
+24-year-old with over a year of experience of working as a programmer in different languages and projects simultaniously at different companies. 
 Currently resides in <a href="https://www.google.se/maps/place/Helsingborg/data=!4m2!3m1!1s0x46522d7a50a22925:0x4019078290e7a90?sa=X&ved=0ahUKEwiPjOnfldTKAhWMCywKHYOJB0gQ8gEIhQEwEA">Helsingborg, Skåne</a>.
 I have an interest in programming and my long term goal is to get a position involving project management after getting a few years of experience so that I know what I am talking about and have more credibility.
 </br></br>
@@ -28,6 +28,7 @@ working with the main logistics system Effect (C#) and a mobile client used in t
 <a href="http://www.markettime.se/">MarketTime AB</a>, 2014 — 2015</br>
 Development of Market Time AB's auction system <a href="www.test2.markettools.se">Markettools</a> and specified pages created for customers of using this website.
 This in combination with writing my Bachelor's Thesis on <a href="http://www.lu.se/lup/publication/5147250"> usability testing (swedish)</a>.
+</br></br>
 
 <h2>Laboratory Technician, Process Engineer, Maintenance Engineer and Handling of Raw Materials</h2>
 <a href="https://www.perstorp.com/">Perstorp AB</a>, 2008 — 2013</br>
