--- a/start.html
+++ b/start.html
@@ -2,7 +2,7 @@
     <a id="welcome-to-my-developer-blog" class="anchor" href="#welcome-to-my-developer-blog" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome!</h1>
 </br>
 My name is Dan Andersson and I am 24 years old.
-I am currently living in Helsingborg (Skane, Sweden) where I am employed at <a href="http://www.nowaste.se/"> Nowaste Logistics AB</a>
+I am currently living in Helsingborg (Skane, Sweden) where I am employed at <a href="http://www.nowaste.se/"> Nowaste Logistics AB</a>. </br>
 I finished my studies at the Faculty of Engineering (LTH), Lund University at Campus Helsingborg with a bachelor's degree in computer science.
 In short it's a broad education that is mostly centered around the development of software, websites or applications for Android phones.
 </br></br>
